--- a/index.html
+++ b/index.html
@@ -1,108 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freshly Brewed</title>
+    <title>Freshly Brewed - task page 1</title>
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" />
-  </head>
 </head>
+</head>
+
 <body>
     <div class="services2">
-      <div class="services2-child"></div>
-      <div class="services">Services</div>
-      <div class="connect-payout">Connect Payout</div>
-      <div class="rectangle-parent">
-        <div class="group-child"></div>
-        <div class="group-item"></div>
-        <div class="neha-bhat">Neha Bhat</div>
-        <div class="home">Home</div>
-        <div class="bookings">Bookings</div>
-        <div class="queries">Queries</div>
-        <div class="schedules">Schedules</div>
-        <div class="profile">Profile</div>
-        <div class="invite-earn">Invite & Earn</div>
-        <div class="rewards">Rewards</div>
-        <div class="logout">Logout</div>
-        <div class="group-inner"></div>
-        <div class="line-div"></div>
-        <img class="vector-icon" alt="" src="./public/vector.svg" />
-  
-        <img class="vector-icon1" alt="" src="./public/vector1.svg" />
-  
-        <img class="vector-icon2" alt="" src="./public/vector2.svg" />
-  
-        <img class="vector-icon3" alt="" src="./public/vector3.svg" />
-  
-        <div class="services1">Services</div>
-        <img class="vector-icon4" alt="" src="./public/vector4.svg" />
-  
-        <img class="vector-icon5" alt="" src="./public/vector5.svg" />
-  
-        <img class="vector-icon6" alt="" src="./public/vector6.svg" />
-  
-        <img class="vector-icon7" alt="" src="./public/vector7.svg" />
-  
-        <img class="vector-icon8" alt="" src="./public/vector8.svg" />
-  
-        <img class="ellipse-icon" alt="" src="./public/ellipse-7@2x.png" />
-      </div>
-      <div class="footer">
-        <div class="footer-child"></div>
-        <div class="help-center">Help center</div>
-        <div class="about-us">About us</div>
-        <div class="faqs">FAQs</div>
-        <img class="vector-icon9" alt="" src="./public/vector9.svg" />
-  
-        <img class="vector-icon10" alt="" src="./public/vector10.svg" />
-  
-        <img class="vector-icon11" alt="" src="./public/vector11.svg" />
-  
-        <img class="vector-icon12" alt="" src="./public/vector12.svg" />
-  
-        <div class="mentorbridge-all-rights-container">
-          2023 M <span class="entorbridge">entorbridge. </span>All Rights
-          Reserved.
+        <div class="services2-child"></div>
+        <div class="services">Services</div>
+        <div class="connect-payout">Connect Payout</div>
+        <div class="rectangle-parent">
+            <div class="group-child"></div>
+            <div class="group-item"></div>
+            <div class="neha-bhat">Neha Bhat</div>
+            <div class="home">Home</div>
+            <div class="bookings">Bookings</div>
+            <div class="queries">Queries</div>
+            <div class="schedules">Schedules</div>
+            <div class="profile">Profile</div>
+            <div class="invite-earn">Invite & Earn</div>
+            <div class="rewards">Rewards</div>
+            <div class="logout">Logout</div>
+            <div class="group-inner"></div>
+            <div class="line-div"></div>
+            <img class="vector-icon" alt="" src="./public/vector.svg" />
+
+            <img class="vector-icon1" alt="" src="./public/vector1.svg" />
+
+            <img class="vector-icon2" alt="" src="./public/vector2.svg" />
+
+            <img class="vector-icon3" alt="" src="./public/vector3.svg" />
+
+            <div class="services1">Services</div>
+            <img class="vector-icon4" alt="" src="./public/vector4.svg" />
+
+            <img class="vector-icon5" alt="" src="./public/vector5.svg" />
+
+            <img class="vector-icon6" alt="" src="./public/vector6.svg" />
+
+            <img class="vector-icon7" alt="" src="./public/vector7.svg" />
+
+            <img class="vector-icon8" alt="" src="./public/vector8.svg" />
+
+            <img class="ellipse-icon" alt="" src="./public/ellipse-7@2x.png" />
         </div>
-        <div class="contact-us">Contact us</div>
-        <div class="privacy-policy">Privacy policy</div>
-        <div class="terms-of-use">Terms of use</div>
-        <img class="vector-icon13" alt="" src="./public/vector13.svg" />
-      </div>
-      <div class="services2-item"></div>
-      <div class="services2-inner"></div>
-      <div class="rectangle-div"></div>
-      <div class="services2-child1"></div>
-      <div class="price-suggestions">Price Suggestions</div>
-      <div class="title">Title</div>
-      <div class="duration">Duration</div>
-      <div class="amount">Amount</div>
-      <div class="name-of-service">Name of service</div>
-      <div class="div">00:00</div>
-      <div class="services2-child2"></div>
-      <div class="services2-child3"></div>
-      <div class="call">1:1 Call</div>
-      <img class="vector-icon14" alt="" src="./public/vector14.svg" />
-  
-      <div class="add">Add</div>
-      <img class="woman-making-a-video-call" alt="" src="./public/woman-making-a-video-call@2x.png" />
-  
-      <img class="vector-icon15" alt="" src="./public/vector15.svg" />
-  
-      <div class="top-menu">
-        <div class="top-menu-child"></div>
-        <img class="logo-icon" alt="" src="./public/logo.svg" />
-  
-        <div class="about-us1">About Us</div>
-        <div class="blog">Blog</div>
-        <div class="filters">Filters</div>
-        <img class="vector-icon16" alt="" src="./public/vector16.svg" />
-  
-        <img class="vector-icon17" alt="" src="./public/vector17.svg" />
-      </div>
+        <div class="footer">
+            <div class="footer-child"></div>
+            <div class="help-center">Help center</div>
+            <div class="about-us">About us</div>
+            <div class="faqs">FAQs</div>
+            <img class="vector-icon9" alt="" src="./public/vector9.svg" />
+
+            <img class="vector-icon10" alt="" src="./public/vector10.svg" />
+
+            <img class="vector-icon11" alt="" src="./public/vector11.svg" />
+
+            <img class="vector-icon12" alt="" src="./public/vector12.svg" />
+
+            <div class="mentorbridge-all-rights-container">
+                2023 M <span class="entorbridge">entorbridge. </span>All Rights
+                Reserved.
+            </div>
+            <div class="contact-us">Contact us</div>
+            <div class="privacy-policy">Privacy policy</div>
+            <div class="terms-of-use">Terms of use</div>
+            <img class="vector-icon13" alt="" src="./public/vector13.svg" />
+        </div>
+        <div class="services2-item"></div>
+        <div class="services2-inner"></div>
+        <div class="rectangle-div"></div>
+        <div class="services2-child1"></div>
+        <div class="price-suggestions">Price Suggestions</div>
+        <div class="title">Title</div>
+        <div class="duration">Duration</div>
+        <div class="amount">Amount</div>
+        <div class="name-of-service">Name of service</div>
+        <div class="div">00:00</div>
+        <div class="services2-child2"></div>
+        <div class="services2-child3"></div>
+        <div class="call">1:1 Call</div>
+        <img class="vector-icon14" alt="" src="./public/vector14.svg" />
+
+        <div class="add">Add</div>
+        <img class="woman-making-a-video-call" alt="" src="./public/woman-making-a-video-call@2x.png" />
+
+        <img class="vector-icon15" alt="" src="./public/vector15.svg" />
+
+        <div class="top-menu">
+            <div class="top-menu-child"></div>
+            <img class="logo-icon" alt="" src="./public/logo.svg" />
+
+            <div class="about-us1">About Us</div>
+            <div class="blog">Blog</div>
+            <div class="filters">Filters</div>
+            <img class="vector-icon16" alt="" src="./public/vector16.svg" />
+
+            <img class="vector-icon17" alt="" src="./public/vector17.svg" />
+        </div>
     </div>
-  </body>
-  
+</body>
+
 </html>
