schedule page added

--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
 <body>
     <div class="services2">
         <div class="services2-child"></div>
-        <div class="services">Services</div>
+        <div class="services"><a href="./Services.html">Services</a></div>
+
         <div class="connect-payout">Connect Payout</div>
         <div class="rectangle-parent">
             <div class="group-child"></div>
             <div class="group-item"></div>
-            <div class="neha-bhat">Neha Bhat</div>
+            <div class="neha-bhat"><a href="index.html">Neha Bhat</a></div>
             <div class="home">Home</div>
             <div class="bookings">Bookings</div>
             <div class="queries">Queries</div>
-            <div class="schedules">Schedules</div>
+            <div class="schedules"><a href="./Schedules.html">Schedules</a></div>
+
             <div class="profile">Profile</div>
             <div class="invite-earn">Invite & Earn</div>
             <div class="rewards">Rewards</div>
