--- a/services.html
+++ b/services.html
@@ -9,6 +9,102 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" />
 </head>
 <body>
-    
+  <div class="services3">
+    <div class="services4"><a href="./Services.css">Services</a></div>
+    <div class="rectangle-group">
+      <div class="group-child1"></div>
+      <div class="group-child2"></div>
+      <div class="neha-bhat1"><a href="./index.html">Neha Bhat</a></div>
+      <div class="home1">Home</div>
+      <div class="bookings1">Bookings</div>
+      <div class="queries1">Queries</div>
+      <div class="schedules1"><a href="./Schedules.html">Schedules</a></div>
+      <div class="profile1">Profile</div>
+      <div class="invite-earn1">Invite & Earn</div>
+      <div class="rewards1">Rewards</div>
+      <div class="logout1">Logout</div>
+      <div class="group-child3"></div>
+      <div class="group-child4"></div>
+      <img class="vector-icon18" alt="" src="./public/vector.svg" />
+
+      <img class="vector-icon19" alt="" src="./public/vector1.svg" />
+
+      <img class="vector-icon20" alt="" src="./public/vector2.svg" />
+
+      <img class="vector-icon21" alt="" src="./public/vector3.svg" />
+
+      <div class="services5">Services</div>
+      <img class="vector-icon22" alt="" src="./public/vector4.svg" />
+
+      <img class="vector-icon23" alt="" src="./public/vector5.svg" />
+
+      <img class="vector-icon24" alt="" src="./public/vector6.svg" />
+
+      <img class="vector-icon25" alt="" src="./public/vector7.svg" />
+
+      <img class="vector-icon26" alt="" src="./public/vector8.svg" />
+
+      <img class="group-child5" alt="" src="./public/ellipse-7@2x.png" />
+    </div>
+    <div class="footer1">
+      <div class="footer-item"></div>
+      <div class="help-center1">Help center</div>
+      <div class="about-us2">About us</div>
+      <div class="faqs1">FAQs</div>
+      <img class="vector-icon27" alt="" src="./public/vector9.svg" />
+
+      <img class="vector-icon28" alt="" src="./public/vector10.svg" />
+
+      <img class="vector-icon29" alt="" src="./public/vector11.svg" />
+
+      <img class="vector-icon30" alt="" src="./public/vector12.svg" />
+
+      <div class="mentorbridge-all-rights-container1">
+        2023 M <span class="entorbridge1">entorbridge. </span>All Rights
+        Reserved.
+      </div>
+      <div class="contact-us1">Contact us</div>
+      <div class="privacy-policy1">Privacy policy</div>
+      <div class="terms-of-use1">Terms of use</div>
+      <img class="vector-icon31" alt="" src="./public/vector13.svg" />
+    </div>
+    <div class="services-child"></div>
+    <div class="create-a-11">Create a 1:1 Service</div>
+    <div class="services-item"></div>
+    <div class="services-inner"></div>
+    <div class="services-child1"></div>
+    <div class="services-child2" id="rectangle6"></div>
+    <div class="call1">1:1 Call</div>
+    <div class="text-query">Text Query</div>
+    <div class="webinar">Webinar</div>
+    <img class="vector-icon32" alt="" src="./public/vector18.svg" />
+
+    <img class="vector-icon33" alt="" src="./public/vector14.svg" />
+
+    <div class="add-service">Add service</div>
+    <div class="add1">Add</div>
+    <img class="woman-making-a-video-call1" alt="" src="./public/woman-making-a-video-call1@2x.png" />
+
+    <div class="top-menu1">
+      <div class="top-menu-item"></div>
+      <img class="logo-icon1" alt="" src="./public/logo.svg" />
+
+      <div class="about-us3">About Us</div>
+      <div class="blog1">Blog</div>
+      <div class="filters1">Filters</div>
+      <img class="vector-icon34" alt="" src="./public/vector16.svg" />
+
+      <img class="vector-icon35" alt="" src="./public/vector17.svg" />
+    </div>
+  </div>
+
+  <script>
+    var rectangle6 = document.getElementById("rectangle6");
+    if (rectangle6) {
+      rectangle6.addEventListener("click", function (e) {
+        window.location.href = "./Services2.html";
+      });
+    }
+  </script>
 </body>
 </html>
